----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-06-04 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: bug 592692, pretty printer
      and GRANT or REVOKE
    * libraries/sqlparser.lib.php3: bug 683975, various pretty printer bugs

2003-06-04 Michal Cihar  <nijel@users.sourceforge.net>
    * mult_submits.inc.php3: Use TRUNCATE when using MySQL 4 (bug #748792).

2003-06-03 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updates, thanks to Dr. med. Daniel Hinostroza C.
    * lang/slovak update, thanks to Lubos Klokner

2003-06-03 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/config_import.lib.php3: Fixed MySQLManualType/MySQLManualBase
      setting.

2003-06-03 Garvin Hicking <me@supergarv.de>
    * lang/*, tbl_query_box.php3, Documentation.html, footer.inc.php3: 
      (Experimental)
      New feature - The automatic update of the query window seems to
      cause some headache for users. They type in their query, want to
      look in a different table for some fields, want to switch back to
      their browser window and the changes are lost because the last table
      is always filled in. Now we have a checkbox to preserve the edited
      content from any update outside of the window. It is automatically
      checked by editing the contents of the query textarea and can be
      unchecked to restore previous behaviour. Thanks to Alexander Meis
      for this suggestion. Optionally we could build in a config variable
      to override this 'onChange' effect, but I guess it's not necessary.
    * libraries/display_tbl.lib.php3: Bug #748084 - Use preg_replace instead 
      of ereg_replace, because it interprets \0, \1 and so on not as strings
      but as regex-subpatterns and fails to convert those strings correctly.
      We'll have to see if that can be the case on other usages of 
      preg_replace as well.
