@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-06-05 Michal Cihar  <nijel@users.sourceforge.net>
+    * libraries/display_export.lib.php3, libraries/functions.js: Some
+      javascript cleanup.
+
 2003-06-04 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.lib.php3: bug 592692, pretty printer
       and GRANT or REVOKE
